--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-server": "^4.4.6",
     "@angular/router": "^4.4.6",
     "angular2-fontawesome": "^0.9.3",
+    "angular2-infinite-scroll": "^0.3.5",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "ng-infinite-scroll": "^1.3.0",
     "ngx-bootstrap": "^1.9.3",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
